# emb

./: README.md  README_GUI.md  README_REPO_DIFF.md  REORGANIZATION_PLAN.md  auto_merge_pr.bat  deploy_emb.py  git-update-merge.bat  git_scripts_readme.md  repo_diff.py  repo_diff_enhanced.py  repo_diff_gui.py  repo_diff_gui_fixed.py  repo_diff_gui_fixed_v2.py  repo_diff_gui_fixed_v3.py  repo_diff_init_specialized.py  repo_diff_init_specialized_fixed.py  repo_diff_init_specialized_fixed_v2.py  repo_diff_init_specialized_fixed_v3.py  revert_last_merge.bat  rp_reviewer.py
AgentGen/: INTEGRATION.md  README.md  README_INTEGRATION.md  __init__.py  codebase.py  integrate_with_codegen.sh  pyproject.toml  repull.sh  setup.py  setup.sh  types.py  unified_setup.sh  unified_setup_fixed.sh  update_codegen_app.sh
AgentGen/agents/: __init__.py  chat_agent.py  code_agent.py  data.py  factory.py  loggers.py  plan_agent.py  research_agent.py  scratch.ipynb  tracer.py  utils.py
AgentGen/cli/: __init__.py
AgentGen/cli/commands/: __init__.py  main.py
AgentGen/cli/commands/agent/: __init__.py  main.py
AgentGen/cli/mcp/: __init__.py  server.py
AgentGen/cli/mcp/agent/: __init__.py  docs_expert.py
AgentGen/cli/mcp/resources/: __init__.py
AgentGen/configs/: __init__.py  session_manager.py  user_config.py
AgentGen/configs/models/: __init__.py  base_config.py  codebase.py  repository.py  secrets.py
AgentGen/extensions/: __init__.py
AgentGen/extensions/clients/: __init__.py  linear.py
AgentGen/extensions/events/: __init__.py  codegen_app.py  github.py  linear.py  slack.py
AgentGen/extensions/events/modal/: __init__.py  base.py
AgentGen/extensions/langchain/: __init__.py  agent.py  graph.py  tools.py
AgentGen/extensions/langchain/document_loaders/: __init__.py  directory_loaders.py  file_loaders.py  web_loaders.py
AgentGen/extensions/langchain/memory/: __init__.py  conversation_buffer.py  conversation_buffer_window.py  conversation_entity.py  conversation_summary.py
AgentGen/extensions/langchain/output_parsers/: __init__.py  json.py  list.py  regex.py  structured.py
AgentGen/extensions/langchain/retrievers/: __init__.py  contextual_compression.py  multi_query.py  self_query.py  vector_store_retriever.py
AgentGen/extensions/langchain/utils/: __init__.py
AgentGen/extensions/langchain/vector_stores/: __init__.py  chroma.py  faiss.py  pinecone.py
AgentGen/extensions/linear/: linear_client.py
AgentGen/extensions/mcp/: __init__.py  codebase_agent.py
AgentGen/extensions/reflection/: README.md  __init__.py  reflection_graph.py
AgentGen/extensions/slack/: __init__.py
AgentGen/extensions/swebench/: harness.py  report.py  subsets.py  utils.py
AgentGen/extensions/tools/: base.py  bash.py  commit.py  global_replacement_edit.py  list_directory.py  reflection.py  relace_edit.py  run_codemod.py  search.py  search_files_by_name.py  semantic_edit.py
AgentGen/extensions/tools/linear/: linear.py
AgentGen/tests/integration/: __init__.py
AgentGen/tests/integration/extension/: test_bash.py  test_github.py  test_linear.py
AgentGen/tests/langchain/: desktop.ini  test_llm.py  test_message_annotation.py  test_tools.py
emb-agents/: README.md  pyproject.toml
emb-agents/emb/agents/: __init__.py  chat_agent.py  code_agent.py  loggers.py  plan_agent.py  research_agent.py  tracer.py  utils.py
emb-core/: README.md  pyproject.toml
emb-core/emb/core/: __init__.py  base.py  config.py  utils.py
(+68 files in other folders)
