[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emb-agents"
version = "0.1.0"
description = "Agent implementations for the EMB framework"
readme = "README.md"
authors = [
    {name = "EMB Team", email = "info@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "emb-core>=0.1.0",
    "langchain>=0.0.267",
    "langchain-core>=0.0.10",
    "langgraph>=0.0.15",
    "langsmith>=0.0.52",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["emb.agents"]

[tool.setuptools.package-data]
"emb.agents" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true